Matchmaker lock during scheduled mainenance hour: 4-5 UTC
